==> meerstern/ToF_UVC_Cam/firm/UVC_RP2040/tmf8829_shim.c <==
#include <stdio.h>
#include <string.h>
#include "pico/stdlib.h"
#include "hardware/i2c.h"
#include "hardware/sync.h"
#include "tmf8829_shim.h"
#include "tmf8829.h"
#include "UVC_RP2040.h"

void delayInMicroseconds ( uint32_t wait )
{
  sleep_us( wait );
}

void enablePinHigh ( void * dptr )
{
  (void)dptr; // not used here
  gpio_put( ENABLE_PIN, HIGH );  
}

void enablePinLow ( void * dptr )
{
  (void)dptr; // not used here
  gpio_put( ENABLE_PIN, LOW );   
}

void i2cOpen ( void * dptr, uint32_t i2cClockSpeedInHz )
{
  (void)dptr; // not used here
  i2c_init(I2C_PORT, i2cClockSpeedInHz);    
  gpio_set_function(I2C_SDA, GPIO_FUNC_I2C);
  gpio_set_function(I2C_SCL, GPIO_FUNC_I2C);
  gpio_pull_up(I2C_SDA);
  gpio_pull_up(I2C_SCL);
}

int8_t inputGetKey(char *c)
{
    int ch = getchar_timeout_us(0);
    if (ch != PICO_ERROR_TIMEOUT)
    {
        *c = (char)ch;
        return 1;
    }
    *c = 0;
    return 0;
}

void pinOutput ( uint8_t pin )
{
  /* define a pin as output */
  gpio_init(pin);
  gpio_set_dir(pin, GPIO_OUT);
}

void pinInput ( uint8_t pin )
{ 
  /* define a pin as input */
  gpio_init(pin);
  gpio_set_dir(pin, GPIO_IN);
}

void setInterruptHandler( void (* handler)( void ) )
{
    user_handler = handler;
    gpio_set_irq_enabled_with_callback(
        INTERRUPT_PIN,
        GPIO_IRQ_EDGE_FALL,  // FALLING
        true,
        &gpio_irq_callback
    );
}

void disableInterruptHandler( uint8_t pin )
{
  gpio_set_irq_enabled(pin, GPIO_IRQ_EDGE_FALL, false);
}

static int8_t i2cTxOnly ( uint8_t logLevel, uint8_t slaveAddr, uint8_t regAddr, uint16_t toTx, const uint8_t * txData )
{
    int8_t res = I2C_SUCCESS;
    uint16_t addr = regAddr;

    uint8_t buffer[ARDUINO_MAX_I2C_TRANSFER];

    do
    {
        uint8_t tx;

        if (toTx > ARDUINO_MAX_I2C_TRANSFER - 1)
            tx = ARDUINO_MAX_I2C_TRANSFER - 1;
        else
            tx = toTx;

        buffer[0] = regAddr;
        if (tx)
        {
            memcpy(&buffer[1], txData, tx);
        }

        if (logLevel & TMF8829_LOG_LEVEL_I2C)
        {
            PRINT_STR("I2C-TX (0x");
            PRINT_UINT_HEX(slaveAddr);
            PRINT_STR(") tx=");
            PRINT_INT(tx + 1);
            PRINT_STR(" 0x");
            PRINT_UINT_HEX(regAddr);

            if (logLevel >= TMF8829_LOG_LEVEL_DEBUG)
            {
                for (uint8_t i = 0; i < tx; i++)
                {
                    PRINT_STR(" 0x");
                    PRINT_UINT_HEX(txData[i]);
                }
            }
            PRINT_LN();
        }

        int ret = i2c_write_blocking(I2C_PORT,
                                    slaveAddr,
                                    buffer,
                                    tx + 1,   // reg + data
                                    false);   // stop

        if (ret < 0)
        {
            return -1;
        }

        toTx -= tx;
        txData += tx;

        if ((addr <= 0xFF) && (addr + tx >= 0xFF))
            regAddr = 0xFF;
        else
            regAddr += tx;

        addr = regAddr;

    } while (toTx);

    return I2C_SUCCESS;
}

static int8_t i2cRxOnly ( uint8_t logLevel, uint8_t slaveAddr, uint16_t toRx, uint8_t * rxData )
{
    uint8_t expected = 0;
    int8_t res = I2C_SUCCESS;

    do
    {
        uint8_t *dump = rxData;

        if (toRx > ARDUINO_MAX_I2C_TRANSFER)
            expected = ARDUINO_MAX_I2C_TRANSFER;
        else
            expected = toRx;

        int ret = i2c_read_blocking(I2C_PORT,
                                   slaveAddr,
                                   rxData,
                                   expected,
                                   false);  // STOP

        if (ret < 0)
        {
            return I2C_ERR_TIMEOUT;
        }

        uint8_t rx = ret;

        rxData += rx;
        toRx -= rx;

        if (logLevel & TMF8829_LOG_LEVEL_I2C)
        {
            PRINT_STR("I2C-RX (0x");
            PRINT_UINT_HEX(slaveAddr);
            PRINT_STR(")");
            PRINT_STR(" toRx=");
            PRINT_INT(rx);

            if (logLevel >= TMF8829_LOG_LEVEL_DEBUG)
            {
                for (uint8_t i = 0; i < rx; i++)
                {
                    PRINT_STR(" 0x");
                    PRINT_UINT_HEX(dump[i]);
                }
            }
            PRINT_LN();
        }

        if (rx != expected)
        {
            res = I2C_ERR_TIMEOUT;
            break;
        }

    } while (toRx);

    return res;
}

void handleReceivedResultData ( void * dptr, uint8_t * data, uint16_t size )
{
  tmf8829Driver * driver = (tmf8829Driver *)dptr;  
  (void)size;
  if ( driver->logLevel >= TMF8829_LOG_LEVEL_RESULTS )
  {
    printResults( driver, data, size ); 
  }

  if( (tofBuffIndex+size) < sizeof(tofBuff) )
  {
    for (uint16_t i =0; i < size; i++)
    {
      tofBuff[tofBuffIndex + i] = data[i];
    }
    tofBuffIndex += size;
  }
  // Note: data size ==1 Error for EOF check, change buffer size !
}
